--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-three-next",
+  "name": "3d",
   "version": "2.0.0",
   "authors": [
     "Renaud ROHLINGER <https://twitter.com/onirenaud>"
@@ -13,6 +13,7 @@
     "@ducanh2912/next-pwa": "^10.0.0",
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.12",
+    "framer-motion": "^11.0.5",
     "glsl-random": "^0.0.5",
     "next": "^14.0.4",
     "react": "^18.2.0",
@@ -25,7 +26,18 @@
     "@next/bundle-analyzer": "^14.0.4",
     "@types/node": "^20.11.17",
     "@types/react": "^18.2.55",
+    "@types/three": "^0.161.2",
     "autoprefixer": "^10.4.16",
+    "@shoplflow/eslint-plugin": "^0.1.0",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^9.1.0",
